# C-EX-Project

./: .gitignore  LICENSE  README.md
Computer_room_booking_system/: CmakeLists.txt
Computer_room_booking_system/data/: admin.txt  order.txt  student.txt  teacher.txt
Computer_room_booking_system/include/: admin.h  file_operator.h  identity.h  manager.h  order.h  student.h  teacher.h
Computer_room_booking_system/src/: admin.cpp  file_operator.cpp  main.cpp  manager.cpp  order.cpp  student.cpp  teacher.cpp
Computer_room_booking_system/test/: CmakeLists.txt  test.cpp
Employee_management_system/: Boss.cpp  CMakeLists.txt  Employee.cpp  Manager.cpp  WorkerManager.cpp  file_operator.cpp  main.cpp  test.cpp
Employee_management_system/.cache/clangd/index/: AbsWorker.h.E97867651B542887.idx  Boss.cpp.88ABDA8A2BE60818.idx  Boss.h.B4E0CE8C4872C1E4.idx  Employee.cpp.A8BD832706D66C03.idx  Employee.h.C1504F0FD0C41A98.idx  Manager.cpp.AA137423D23375E8.idx  Manager.h.15D9AB6AF2B78379.idx  WorkerManager.cpp.27930CDE972A6EB9.idx  WorkerManager.h.A64C9AAE2DA28AB0.idx  file_operator.cpp.C36525E5A220B04E.idx  file_operator.h.14D7D255D1A8088F.idx  main.cpp.796D8EF458E8F273.idx
Employee_management_system/data/: test.txt
Employee_management_system/include/: AbsWorker.h  Boss.h  Employee.h  Manager.h  WorkerManager.h  file_operator.h
Ex_project/src/: temp.cpp
Speech_Competition/: CMakeLists.txt
Speech_Competition/.cache/clangd/index/: main.cpp.6552BC008246F1A7.idx  player.h.95C48F667E61392B.idx  speechManager.cpp.4BA1F71330A734F0.idx  speechManager.h.28DE0F1DC3505237.idx  test.cpp.F246262B1E3E8172.idx
Speech_Competition/.vcode/VSCodeCounter/2024-05-16_17-03-53/: details.md  diff-details.md  diff.md  results.json  results.md
Speech_Competition/include/: file_operator.h  player.h  speechManager.h
Speech_Competition/src/: file_operator.cpp  main.cpp  speechManager.cpp
Speech_Competition/tests/: cMakeLists.txt  test.cpp
(+16 files in other folders)
